--- a/_posts/2018-07-02-profits.md
+++ b/_posts/2018-07-02-profits.md
@@ -29,3 +29,18 @@ excerpt: Зачем заниматься НЛП, чем оно может пом
   скорректировать их, чтобы получать больше пользы от нашей системы
   "автопилота".
 
+- **Доносить до других свои мысли.**  Ни для кого не будет секретом,
+  что огромное число конфликтов в жизни любого человека возникает
+  из-за недопонимания сторон друг другом.  НЛП позволяет понять
+  восприятие мира собеседником и представить ему свою идею именно в
+  таком ключе, который будет ему понятен.  Это совсем не означает, что
+  это будет *другая идея*, это лишь представление тех же самых идей *с
+  другой стороны*.
+
+- **Рассматривать идеи, ситуации и людей с разных точек зрения.**  В
+  НЛП это называется *позициями восприятия*, когда мы думаем не только
+  о том, *что хотим сказать*, но так же о том, *как это воспринимает
+  собеседник*.  Кроме того, хорошая практика рассматривать ситуации и
+  проекты с разных сторон позволит заранее предусмотреть различные
+  варианты развития событий, и подготовить соответствующие пути
+  решения возникающих проблем.
