--- a/_posts/2018-07-02-profits.md
+++ b/_posts/2018-07-02-profits.md
@@ -11,7 +11,7 @@ excerpt: Зачем заниматься НЛП, чем оно может пом
 заниматься делами, и в таких случаях помогают *списки успехов*.  Вот
 один из таких списков, в чем НЛП помогает.
 
-- **Понимание мотивов поведения других людей.** Каждый из нас
+- **Понимать мотивов поведения других людей.** Каждый из нас
   бесчисленное множество раз сталкивался с непонятным поведением
   других, с бесполезными попытками наладить взаимопонимание.  До тех
   пор, пока отсутствует хоть какое-то представление о причинах
@@ -19,7 +19,7 @@ excerpt: Зачем заниматься НЛП, чем оно может пом
   успехи или неудачи.  С помощью НЛП случайные результаты можно
   превратить в *стабильные*.
 
-- **Коррекция поведения.** Во многом наше поведение подчиняется
+- **Корректировать поведения.** Во многом наше поведение подчиняется
   выработанным за долгое время повторений реакциям.  Это похоже на
   автопилот, который работает быстро и позволяет нам упростить нашу
   жизнь.  Проблема чаще всего заключается в том, что эти реакции,
