--- a/_posts/2018-07-02-profits.md
+++ b/_posts/2018-07-02-profits.md
@@ -19,6 +19,14 @@ excerpt: Зачем заниматься НЛП, чем оно может пом
   успехи или неудачи.  С помощью НЛП случайные результаты можно
   превратить в *стабильные*.
 
+- **Понять себя.** В основе НЛП лежит изучение поведения людей и их
+  взаимодействие.  Совсем не обязательно учиться взаимодействовать с
+  людьми, но понимать свои мотивы и поведение, пожалуй, должен каждый
+  человек.  НЛП позволяет сделать и это.  И уже дальше можно
+  приступать к изменению своего собственного поведения, если мы
+  находим другие формы, позволяющие получать тот же результат с
+  меньшими усилиями.
+
 - **Корректировать поведения.** Во многом наше поведение подчиняется
   выработанным за долгое время повторений реакциям.  Это похоже на
   автопилот, который работает быстро и позволяет нам упростить нашу
@@ -44,3 +52,39 @@ excerpt: Зачем заниматься НЛП, чем оно может пом
   проекты с разных сторон позволит заранее предусмотреть различные
   варианты развития событий, и подготовить соответствующие пути
   решения возникающих проблем.
+
+- **Быстро получить результат.** НЛП является одной из самых
+  *практических* дисциплин.  С одной стороны это является проблемой,
+  потому что одной теорией здесь не обойдешься, но в то же время
+  именно практическое приложение НЛП к реальной жизни позволяет ему
+  оставаться актуальным уже десятки лет.  Необходимость прорабатывать
+  приемы на практике и возможность сразу получить ответ и
+  скорректировать свое поведение позволяет двигаться вперед очень
+  быстро.
+
+- **Самая широкая сфера применения: социальное взаимодействие.** Не
+  секрет, что много времени мы проводим в общении, формы которого
+  бывают самыми различными: это и разговор с супругом или ребенком,
+  работа с коллегами, чтение лекций или их посещение, написание книг и
+  текстов на сайт, переписка с друзьями в соцсети и многие другие.
+  Все эти сферы по сути своей представляют социальное взаимодействие в
+  различных формах, и НЛП как раз изучает такое взаимодействие.  Более
+  того, с одним и тем же человеком можно взаимодействовать с помощью
+  разных форм.
+
+- **Быстро учиться.** Здесь речь идет не о том, чтобы быстро
+  запоминать или составлять логические последовательности, скорее, о
+  том, что отличает настоящего профессионала своего дела от новичка,
+  пусть даже очень грамотного.  Обычно это называется "чутьем", но у
+  НЛП на этот счет свой взгляд: это система действий, которые человек
+  предпринимает для достижения цели.  Не всегда эти действия очевидны,
+  поэтому "чутью" придают столько мистической окраски.  НЛП же изучает
+  внутренние психические процессы и при необходимости позволяет это
+  "чутье" перенять.
+
+Польза применения НЛП не ограничивается приведенными разделами, она
+гораздо шире, ведь оно изучает человека и знает, как его можно
+изменить.  А всякое изменение в жизни, пусть даже небольшое, в
+конечном итоге нарастает как снежный ком.  Несколько небольших шагов
+могут сильно изменить жизнь, и именно поэтому НЛП стоит того, чтобы
+изучить хотя бы основы.
